# lotte

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  makefile  pyproject.toml
src/: constants.py  db.py  main.py  secrets.py
tests/: test_secrets.py
