[tool.poetry]
name = "lotte"
version = "0.1.0"
description = ""
authors = ["Jaesung Ryu <cwryu6252@naver.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyodbc = "^4.0.34"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
